--- a/snake/css/main.css
+++ b/snake/css/main.css
@@ -1,50 +1,38 @@
-* {
-  border: 1px solid red;
-  margin: 0;
+#game {
+  border: 4px solid green;
 }
 
-.container {
-  position: relative;
-  height: 95vh;
-  width: 100%;
-  margin: auto;
+body {
+  font-family: Comic Sans MS;
+  height: 100vh;
+  background: linear-gradient(
+    0deg,
+    rgb(31, 111, 6) 0%,
+    rgba(253, 187, 45, 1) 100%
+  );
+  text-align: center;
+  overflow: hidden;
 }
 
-.menu {
+#panel {
   display: flex;
-}
-
-.controller {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  width: 20%;
-  height: 30%;
-  border-radius: 50%;
-  background-color:gray;
-}
-
-.inner-controller {
-  height: 100%;
-  position: unset;
+  justify-content: space-around;
+  width: 800px;
+  margin: auto;
   align-items: center;
-  display: flex;
-  flex-direction: column;
-  justify-content:space-around;
-  margin: auto;
+  font-weight: bold;
 }
 
-.tile-row {
-  display: flex;
-}
-
-.tile {
-  background-color: rgb(177, 177, 177);
-  width: 20px;
-  height: 20px;
+h1 {
   margin: 0;
+  padding: 0;
 }
 
-.gold {
-  background-color: gold;
+#start {
+  height: 40px;
+  width: 100px;
+  border-radius: 10px;
+  border: 4px solid black;
+  background-color: yellowgreen;
+  box-shadow: 0px 0px 15px gray;
 }
