--- a/snake/css/main.css
+++ b/snake/css/main.css
@@ -14,12 +14,20 @@ body {
   overflow: hidden;
 }
 
-#panel {
+.panel {
   display: flex;
-  justify-content: space-around;
-  width: 800px;
+  justify-content: space-between;
+  width: 400px;
   margin: auto;
   align-items: center;
+  font-weight: bold;
+}
+
+#player {
+  padding: 4px;
+  font-family: Comic Sans MS;
+  border: 4px solid black;
+  border-radius: 5px;
   font-weight: bold;
 }
 
@@ -28,7 +36,7 @@ h1 {
   padding: 0;
 }
 
-#start {
+button {
   height: 40px;
   width: 100px;
   border-radius: 10px;
